Fixing problem where hamburger menu became too big

--- a/css/1024.css
+++ b/css/1024.css
@@ -18,9 +18,7 @@
     .undernav {
       width: 100%;
     }
-    .hamburger {
-      width: 83.91%;
-    }
+
     .hamburger > .bar {
       background-color: black;
       width: 1.4vw;
